# Trading_Swarm

./: .env.example  .gitignore  CLAUDE.md  MULTI_PERSONA_IMPLEMENTATION.md  Makefile  README.md  SESSION_7.5_COMPLETION.md  SESSION_7_IMPLEMENTATION.md  SESSION_8_COMPLETION.md  SESSION_8_FINAL_SUMMARY.md  SESSION_8_PROGRESS.md  evaluate_candidate.py  generate_training_dataset.py  pyproject.toml  requirements-training.txt  requirements.txt  run_autoresearch.py  run_dpo_training.py  run_grpo_training.py  run_multi_persona.py  run_signal_loop.py  run_single_signal.py  run_verification.py  start.bat  start.sh  test_mtf_integration_manual.py  test_quick_run.py  verify_session1.sh
.claude/: settings.json  settings.local.json
autoresearch/: program.md  results.tsv
config/: __init__.py  fee_model.py  settings.py
dashboard/: __init__.py  api.py  data_readers.py
data/: __init__.py  cache_wrapper.py  historical_windows.py  indicators.py  inference_queue.py  market_data.py  market_snapshot.py  prompt_builder.py  regime_filter.py
docs/: SESSION_2_CODE_REVIEW.md  SESSION_3_IMPLEMENTATION.md  SESSION_5_IMPLEMENTATION.md
eval/: __init__.py  config.py  engine.py  metrics.py
evaluation/: __init__.py  baseline_metrics.json  xgboost_baseline.py  xgboost_eval.py
execution/: __init__.py  binance_client.py  exceptions.py  exchange_router.py  hyperliquid_adapter.py  models.py  position_sizing.py  state_manager.py  watchdog.py
orchestration/: __init__.py  trading_graph.py
signals/: __init__.py  accuracy_tracker.py  llm_context.py  preflight.py  signal_log.jsonl  signal_loop.py  (+6 more)
(+176 files in other folders)
